[gd_scene load_steps=3 format=3 uid="uid://cpgxnj76g16pv"]

[ext_resource type="Script" path="res://gui/dialogs/text_input_dialog.gd" id="1_erv1m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4d2qk"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_erv1m")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.4
anchor_right = 0.65
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4d2qk")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 6
text = "What's your name?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="LineEdit" type="LineEdit" parent="MarginContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Zoe"
alignment = 1
context_menu_enabled = false
middle_mouse_paste_enabled = false
select_all_on_focus = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="OK" type="Button" parent="MarginContainer/MarginContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "OK"

[node name="Cancel" type="Button" parent="MarginContainer/MarginContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Cancel"

[connection signal="text_submitted" from="MarginContainer/MarginContainer/VBox/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="button_down" from="MarginContainer/MarginContainer/VBox/HBoxContainer/OK" to="." method="_on_ok_button_down"]
[connection signal="button_down" from="MarginContainer/MarginContainer/VBox/HBoxContainer/Cancel" to="." method="_on_cancel_button_down"]
